--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^1.2.1",
-    "@supabase/ui": "^0.36.2",
+    "@supabase/auth-helpers-nextjs": "^0.5.6",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/auth-ui-react": "^0.3.5",
+    "@supabase/auth-ui-shared": "^0.1.3",
+    "@supabase/supabase-js": "^2.13.1",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
