--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-transition-group": "^4.4.5",
     "swr": "^2.0.0"
   }
 }
